--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practicando el Modelo de Caja en CSS</title>
-    <!-- importa la hoja de estulos -->
+    <!-- Importa la hoja de estilos -->
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <!-- Crea un div con clase "mi-div" -->
+    <div class="mi-div">
+        <h2>Mi caja de ejemplo</h2>
+        <p>Este div aplica el modelo de caja en CSS.</p>
+    </div>
 </body>
 </html>
